# rampage_rl

./: .gitignore  Cargo.toml  Readme.md  flake.nix  justfile  rustfmt.toml
.github/workflows/: rust.yml  wasm.yml
app/: Cargo.toml
app/src/: camera.rs  context.rs  draw.rs  egui_inspector.rs  egui_macroquad.rs  fps_counter.rs  hotreload.rs  main.rs  material.rs  static_worker.rs  text.rs
app/src/shaders/: sprite.frag.glsl  sprite.vert.glsl
app/src/util/: mod.rs  profile_util.rs  texture_store.rs
assets/: Attribution.md
base/: Cargo.toml
base/src/: circle.rs  grids.rs  input.rs  ldtk.rs  lib.rs  pos.rs  profile_util.rs  rational.rs  rect.rs  shadowcasting.rs  text.rs  util.rs
web/: index.html
worker/: Cargo.toml
worker/src/: animation.rs  coroutines.rs  dijkstra.rs  dijstra.rs  ecs_setup.rs  ecs_util.rs  fleeting.rs  game.rs  genarena.rs  lib.rs  persistent.rs  quicksilver_glue.rs  rand.rs  util.rs
worker/src/game/: creature.rs  debug_util.rs  drawing.rs  ecs_types.rs  game_ai.rs  game_logic.rs  input_handling.rs  mapgen.rs  sprites.rs  tile_map.rs  tiles.rs  types.rs  ui.rs  z_levels.rs
worker/src/game/mapgen/: astar_dig.rs
