[workspace]
resolver = "2"

members = [ "app" , "base", "worker"]

[profile.release]
opt-level = 3
#lto = true
#codegen-units = 1
#debug=true #careful with code size

[workspace.dependencies]
#nanoserde = { git = "https://github.com/not-fl3/nanoserde.git", branch= "master" }
quicksilver = { path = "../quicksilver/quicksilver", version = "0.1.0"}