[workspace]
resolver = "2"

members = [ "app" , "base", "worker"]

[profile.release]
opt-level = 3
#lto = true
#codegen-units = 1
#debug=true #careful with code size

[workspace.dependencies]
#froql = { version = "0.1.0", path = "../fast_queries/froql" }
froql = { version = "0.1.0", git = "https://github.com/kampffrosch94/froql.git" }
#quicksilver = { path = "../quicksilver/quicksilver", version = "0.1.0"}
quicksilver = { git = "https://github.com/kampffrosch94/quicksilver.git", version = "0.1.0"}
tracy = { package = "tracy_full", version = "=1.12.0", features = ["enable"] }