[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = {version = "0.8.5", optional = true}
base.path = "../base"
macroquad = { git = "https://github.com/not-fl3/macroquad", version = "0.4.13" }
notify = {version = "7.0.0", optional = true}
tween = "2.0.3"
derive_more = { version = "1.0.0", features = ["full"] }

# optional
worker = {path = "../worker", optional = true}
cosmic-text = { version = "0.12.1", default-features = false, features = ["swash", "no_std"] }


[features]
default = ["hotreload"]
staticlink = ["dep:worker"]
hotreload = ["dep:notify", "dep:libloading"]
