[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = {version = "0.8.5", optional = true}
base.path = "../base"
macroquad = { version = "0.4" }
notify = {version = "7.0.0", optional = true}
tween = "2.0.3"
derive_more = { version = "1.0.0", features = ["full"] }
cosmic-text = { version = "0.15.0", default-features = false, features = ["swash", "std"] }
quicksilver.workspace = true

# optional
worker = {path = "../worker", optional = true}
egui = {version = "0.31", optional = true}
egui-miniquad = {version = "0.16", optional = true}

[features]
default = ["hotreload"]
staticlink = ["dep:worker"]
hotreload = ["dep:notify", "dep:libloading", "dep:egui-miniquad", "dep:egui"]
profile = ["base/profile", "staticlink"]
